Fix search and discover overflow scroll

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -44,3 +44,7 @@
     height: 300px;
     width: 300px;
 }
+
+.discover-container {
+    overflow-y: auto;
+}
