--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -2,6 +2,7 @@
     display: flex;
     box-sizing: border-box;
     height: 100vh;
+    overflow-y: auto;
 }
 
 .search-main {
@@ -26,6 +27,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    overflow-y: auto;
 }
   
 .user-card {
