--- a/src/styles/components/discover/Discover.css
+++ b/src/styles/components/discover/Discover.css
@@ -1,5 +1,5 @@
 .discover-container-in-discover {
-  
+  overflow-y: auto;
 }
 
 .discover-heading {
